RESOLVED FIXED111662
[wk2] Page overlays shouldn't dirty the entire layer when flushing if the main frame can't scroll
https://bugs.webkit.org/show_bug.cgi?id=111662
Summary [wk2] Page overlays shouldn't dirty the entire layer when flushing if the mai...
Tim Horton
Reported 2013-03-06 19:01:41 PST
We currently setNeedsDisplay() on the whole page overlay layer every time through TCADA::flushLayers. This is necessary to keep things painted in the right place when we scroll, but is quite wasteful in apps that don’t scroll. Instead, we can setNeedsDisplay() at scroll time instead. Testing with the Find overlay and other Safari overlays seems to work. <rdar://problem/13355808>
Attachments
patch (2.42 KB, patch)
2013-03-06 19:05 PST, Tim Horton
simon.fraser: review+
better patch! (2.50 KB, patch)
2013-03-21 16:39 PDT, Tim Horton
dino: review+
Tim Horton
Comment 1 2013-03-06 19:05:00 PST
Simon Fraser (smfr)
Comment 2 2013-03-06 19:16:41 PST
Comment on attachment 191891 [details] patch Yay
Tim Horton
Comment 3 2013-03-06 22:01:05 PST
WebKit Review Bot
Comment 4 2013-03-10 12:23:44 PDT
Re-opened since this is blocked by bug 111945
Tim Horton
Comment 5 2013-03-21 16:39:26 PDT
Created attachment 194381 [details] better patch!
Dean Jackson
Comment 6 2013-03-21 16:42:18 PDT
Comment on attachment 194381 [details] better patch! you said you'd remove local var on irc
Tim Horton
Comment 7 2013-03-21 16:50:32 PDT
Note You need to log in before you can comment on or make changes to this bug.