[wk2] Page overlays shouldn't dirty the entire layer when flushing if the main frame can't scroll https://bugs.webkit.org/show_bug.cgi?id=111662 <rdar://problem/13355808>

Reviewed by Simon Fraser.

Instead of setNeedsDisplay()ing the whole page overlay layer every time through
TCADA::flushLayers, do it at scroll time instead. Repainting on scroll is
necessary to keep things painted in the right place when we scroll (the overlay
is fixed to the size of the view), but is quite wasteful in apps that don’t scroll.

This works with threaded scrolling because overlay installation forces us
into main-thread scrolling mode.

* WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:
(WebKit::TiledCoreAnimationDrawingArea::scroll):
(WebKit::TiledCoreAnimationDrawingArea::flushLayers):


Canonical link: https://commits.webkit.org/130043@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145039 268f45cc-cd09-0410-ab3c-d52691b4dbfc