Source/WebKit2/WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm
@@ -110,6 +110,7 @@ void TiledCoreAnimationDrawingArea::setNeedsDisplayInRect(const IntRect& rect)
 
 void TiledCoreAnimationDrawingArea::scroll(const IntRect& scrollRect, const IntSize& scrollDelta)
 {
+    m_pageOverlayLayer->setNeedsDisplay();
 }
 
 void TiledCoreAnimationDrawingArea::setRootCompositingLayer(GraphicsLayer* graphicsLayer)
@@ -307,7 +308,6 @@ bool TiledCoreAnimationDrawingArea::flushLayers()
     }
 
     if (m_pageOverlayLayer) {
-        m_pageOverlayLayer->setNeedsDisplay();
         if (TiledBacking* overlayTiledBacking = m_pageOverlayLayer->tiledBacking())
             overlayTiledBacking->setVisibleRect(enclosingIntRect(m_rootLayer.get().frame));
         m_pageOverlayLayer->flushCompositingStateForThisLayerOnly();
